# hoffman-agents

./: .gitignore  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  local-server.js
docs/: CA_RUNTIME_API.md
hoffman-agents-python/: MANIFEST.in  README.md  SETUP.md  pyproject.toml  runAllExamples.sh
hoffman-agents-python/.context/: SESSION_CONTEXT.md  SKILL.md
hoffman-agents-python/examples/01_fitness_beats_truth/: fitness_beats_truth.py
hoffman-agents-python/examples/02_quantum_signature/: README.md  quantum_signature.py
hoffman-agents-python/examples/03_weather_benchmark/: weather_benchmark.py
hoffman-agents-python/examples/04_stop_lights/: stop_lights.py
hoffman-agents-python/examples/05_self_ref_ablation/: self_ref_ablation.py
hoffman-agents-python/examples/06_lem_dashboard/: README.md  lem_dashboard.html  lem_engine.py
hoffman-agents-python/src/conscious_agent/: __init__.py
hoffman-agents-python/src/conscious_agent/agent/: __init__.py  conscious_agent.py  decision_map.py  experience_space.py  perceptual_map.py  simple_world.py  world_state.py
hoffman-agents-python/src/conscious_agent/combination/: __init__.py  operator.py
hoffman-agents-python/src/conscious_agent/core/: __init__.py  experience_lexicon.py  experience_trie.py  meta_trie.py  self_token.py  strange_loop.py  token_inventor.py  trace_buffer.py  trie_compression.py
hoffman-agents-python/src/conscious_agent/io/: __init__.py  serialization.py
hoffman-agents-python/src/conscious_agent/meaning/: __init__.py  shared_meaning.py
hoffman-agents-python/tests/: test_core.py
(+83 files in other folders)
