[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscious-agent"
dynamic = ["version"]
description = "Self-referential structure-learning system — agents that learn by inhabiting worlds"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Benjamin"},
]
keywords = [
    "consciousness",
    "emergent-language",
    "self-reference",
    "structure-learning",
    "hoffman",
    "conscious-realism",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7"]

[dependency-groups]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["conscious_agent*"]

[tool.setuptools.dynamic]
version = {attr = "conscious_agent.__version__"}

[project.urls]
Homepage = "https://ben42-01.github.io/hoffman-agents"
Repository = "https://github.com/ben42-01/hoffman-agents"
